--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!
+{% block title %}
+	<title>Log in!</title>
 {% endblock %}
 {% block header %}{% endblock %}
 {% block body %}
@@ -23,22 +24,22 @@
 		<label for="inputPassword">Password</label>
 		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"><br>
 
 		{#
-								        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-								        See https://symfony.com/doc/current/security/remember_me.html
-								
-								        <div class="checkbox mb-3">
-								            <label>
-								                <input type="checkbox" name="_remember_me"> Remember me
-								            </label>
-								        </div>
-								    #}
+																        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																        See https://symfony.com/doc/current/security/remember_me.html
+																
+																        <div class="checkbox mb-3">
+																            <label>
+																                <input type="checkbox" name="_remember_me"> Remember me
+																            </label>
+																        </div>
+																    #}
 
 		<button class="btn btn-lg btn-primary" type="submit">
 			Sign in
 		</button>
 	</form>
 {% endblock %}
+{% block preview %}{% endblock %}
