mise en form pages login

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,10 +2,15 @@
 
 {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}Inscription
+{% block title %}
+	<title>
+		Inscription
+	</title>
 {% endblock %}
 
-{% block header %}{% endblock %}
+{% block hero %}
+	<img class="img-fluid" src="assets/img/neige_mini.jpg" alt="panorama des alpes"/>
+{% endblock %}
 {% block body %}
 	<div class="">
 
