--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,53 +23,9 @@
 		<main
 			class="flex-shrink-0">
 			<!-- Navigation-->
-			{% block nav %}
-				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-					<div class="container px-5">
-						<a class="navbar-brand" href="/"><img class="rounded-circle img-fluid" src="assets/icone/logo.png" alt="logo" width="90x150"/>
-							Snow Tricks</a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link" href="index.html">Home</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="about.html">Figures</a>
-								</li>
-
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">S'identifier</a>
-									<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-										<li>
-											<a class="dropdown-item" href="{{ path('app_login')}}">Se connecter</a>
-										</li>
-										<li>
-											<a class="dropdown-item" href="{{ path('app_register')}}">S'inscrire</a>
-										</li>
-									</ul>
-								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-									<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-										<li>
-											<a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a>
-										</li>
-										<li>
-											<a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-			{% endblock %}
-
+			{% include "partials/header.html.twig" %}
 			<!-- Header-->
-			{% block header %}
+			{% block hero %}
 				<header class="py-5">
 					<div class="container px-5" style="background-color:grey;">
 						<div class="row gx-5 align-items-center justify-content-center">
@@ -194,24 +150,8 @@
 					</section>
 				{% endblock %}
 			</main>
+			{% include "partials/footer.html.twig" %}
 
-			<!-- Footer-->
-			<footer class="bg-dark py-4 mt-auto">
-				<div class="container px-5">
-					<div class="row align-items-center justify-content-between flex-column flex-sm-row">
-						<div class="col-auto">
-							<div class="small m-0 text-white">Copyright &copy; Your Website 2022</div>
-						</div>
-						<div class="col-auto">
-							<a class="link-light small" href="#!">Privacy</a>
-							<span class="text-white mx-1">&middot;</span>
-							<a class="link-light small" href="#!">Terms</a>
-							<span class="text-white mx-1">&middot;</span>
-							<a class="link-light small" href="#!">Contact</a>
-						</div>
-					</div>
-				</div>
-			</footer>
 			<!-- Bootstrap core JS-->
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 			<!-- Core theme JS-->
