--- a/templates/figure/show_figure.html.twig
+++ b/templates/figure/show_figure.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	<title>Les figures</title>!
+	<title>Les figures</title>
 {% endblock %}
 {% block hero %}{% endblock %}
 {% block body %}
