--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -12,8 +12,16 @@
 				<li class="nav-item">
 					<a class="nav-link" href="{{ path('app_home')}}">Home</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('app_figure')}}">Figures</a>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Figures</a>
+					<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+						<li>
+							<a class="dropdown-item" href="{{ path('app_show-figure')}}">Voir les figures</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href="{{ path('app_add_figure')}}">Ajouter une figure</a>
+						</li>
+					</ul>
 				</li>
 
 				<li class="nav-item dropdown">
