--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,9 +3,7 @@
 {% block title %}
 	<title>Log in!</title>
 {% endblock %}
-{% block hero %}
-	<img class="img-fluid" src="assets/img/connexion.jpg" alt="panorama des alpes"/>
-{% endblock %}
+{% block hero %}{% endblock %}
 {% block body %}
 	<form method="post">
 		{% if error %}
@@ -29,15 +27,15 @@
 		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"><br>
 
 		{#
-																				        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																				        See https://symfony.com/doc/current/security/remember_me.html
-																				
-																				        <div class="checkbox mb-3">
-																				            <label>
-																				                <input type="checkbox" name="_remember_me"> Remember me
-																				            </label>
-																				        </div>
-																				    #}
+																						        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																						        See https://symfony.com/doc/current/security/remember_me.html
+																						
+																						        <div class="checkbox mb-3">
+																						            <label>
+																						                <input type="checkbox" name="_remember_me"> Remember me
+																						            </label>
+																						        </div>
+																						    #}
 
 		<button class="btn btn-lg btn-primary" type="submit">
 			Sign in
