--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -2,3 +2,21 @@
 {% block title %}
 	<title>Snow Tricks</title>
 {% endblock %}
+{% block body %}
+	<main>
+		<div class="container">
+			<section>
+				<div class="row">
+					<h1>les derniers Tricks</h1>
+				</div>
+				<div>
+					<div class="col-12"></div>
+
+					{{ dump() }}
+
+
+				</div>
+			</section>
+		</div>
+	</main>
+{% endblock %}
