--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -2,21 +2,63 @@
 {% block title %}
 	<title>Snow Tricks</title>
 {% endblock %}
+{% block hero %}{% endblock %}
 {% block body %}
-	<main>
-		<div class="container">
-			<section>
-				<div class="row">
-					<h1>les derniers Tricks</h1>
+
+	<section class="py-2">
+		<div class="container px-2 mb-5">
+			<div class="row gx-5 mb-5 justify-content-center">
+				<div class="col-lg-8 col-xl-6">
+					<div class="text-center"><hr>
+						<p class="lead fw-normal text-muted mb-3">Ce site est communautaire, il vous appartient.
+							<br>Faites le vivre, créez de nouvelles figures ou ajoutez vos commentaires
+						</p><hr>
+						<h1 class="fw-bolder p-3">Les derniers Tricks</h1>
+					</div>
 				</div>
-				<div>
-					<div class="col-12"></div>
+			</div>
+			{% for figure in figures %}
+				<div class="row gx-5">
+					<div class="col-lg-4 mb-5 pb-3">
+						<div class="card h-100 shadow border-0">
+							<img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..."/>
+							<div class="card-body p-4">
+								<div class="badge bg-primary bg-gradient rounded-pill mb-2">Nouveauté</div>
+								<a class="text-decoration-none link-dark stretched-link" href="#!">
+									<h2 class="card-title mb-3">{{ figure.title }}</h2>
+								</a>
+								<p class="card-text mb-0">{{ figure.description }}</p>
+							</div>
+							<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+								<div class="d-flex align-items-end justify-content-between mb-4">
+									<div class="d-flex align-items-center">
+										<img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..."/>
+										<div class="small">
+											<div class="fw-bold">{{ figure.user.username }}</div>
+											<div class="text-muted">{{ figure.createdAt | date('d/m/Y') }}
+												&middot;
+												{{ figure.createdAt | date('H:i') }}</div>
+										</div>
+									</div>
+								</div>
+								<div class="container">
+									<div class="row justify-content-between">
+										<div class="col-3">
+											<a><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
+										</div>
+										<div class="col-3 ">
+											<a><img class="img-fluid text-right" src="/assets/icone/poubelle.png" alt="logo" width="40*40"/></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
-					{{ dump() }}
-
-
+					</div>
 				</div>
-			</section>
+			{% endfor %}
+
 		</div>
-	</main>
+	</section>
 {% endblock %}
+{% block preview %}{% endblock %}
