page une figure

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5687,7 +5687,7 @@ fieldset:disabled .btn {
 
 .alert-danger {
   color: #842029;
-  background-color: #b82828;
+  background-color: #5ef4ca;
   border-color: #f5c2c7;
 }
 
