--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -15,6 +15,7 @@
 	{{ form_row(form.title) }}
 	{{ form_row(form.description) }}
 	{{ form_row(form.category) }}
+	{{ form_row(form.media) }}
 	<br><button type="submit" class="btn btn-primary">
 		{% if editMode %}
 			Modifier la figure
