--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,11 +42,10 @@
 						<div class="row gx-5 align-items-center justify-content-center">
 							<div class="col-lg-8 col-xl-7 col-xxl-6">
 								<div class="my-5 text-center text-xl-start">
-									<h1 class="display-5 fw-bolder text-white mb-2">Le snowboard n'est pas un sport, c'est un art de vivre, voir de l'art tout court !</h1>
+									<h1 class="display-5 fw-bolder text-white mb-2">Le snowboard n'est pas un sport, c'est un art de vivre, voire de l'art tout court !</h1>
 								</div>
 								<div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-									<a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-									<a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+									<a class="btn btn-outline-light btn-lg px-4" href="#figures">Les figures</a>
 								</div>
 							</div>
 							<div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/img/header2.jpg" alt="..."/></div>
