--- a/templates/figure/show_figure.html.twig
+++ b/templates/figure/show_figure.html.twig
@@ -14,32 +14,32 @@
 
 			<img class="img-fluid">
 			<h2 class="card-title mb-3">{{ figure.title }}</h2>
-		</a>
-		<p class="card-text mb-0">{{ figure.description }}</p>
-	</div>
-	<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-		<div class="d-flex align-items-end justify-content-between mb-4">
-			<div class="d-flex align-items-center">
-				<img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..."/>
-				<div class="small">
-					<div class="fw-bold">{{ figure.user.username }}</div>
-					<div class="text-muted">{{ figure.createdAt | date('d/m/Y') }}
-						&middot;
-						{{ figure.createdAt | date('H:i') }}</div>
+
+			<p class="card-text mb-0">{{ figure.description }}</p>
+		</div>
+		<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+			<div class="d-flex align-items-end justify-content-between mb-4">
+				<div class="d-flex align-items-center">
+					<img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..."/>
+					<div class="small">
+						<div class="fw-bold">{{ figure.user.username }}</div>
+						<div class="text-muted">{{ figure.createdAt | date('d/m/Y') }}
+							&middot;
+							{{ figure.createdAt | date('H:i') }}</div>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-3">
+						<a><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
+					</div>
+					<div class="col-3 ">
+						<a><img class="img-fluid text-right" src="/assets/icone/poubelle.png" alt="logo" width="40*40"/></a>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row justify-content-between">
-				<div class="col-3">
-					<a><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
-				</div>
-				<div class="col-3 ">
-					<a><img class="img-fluid text-right" src="/assets/icone/poubelle.png" alt="logo" width="40*40"/></a>
-				</div>
-			</div>
-		</div>
-
-
-	</div>
-</section>{% endblock %}{% block preview %}{% endblock %}
+	</section>
+{% endblock %}
+{% block preview %}{% endblock %}
