--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,7 @@
 		<meta name="description" content=""/>
 		<meta name="R1" content=""/>
 		<title>
-			{% block title %}
-				Modern Business - Start Bootstrap Template
+			{% block title %}Snow tricks
 			{% endblock %}
 		</title>
 		<!-- Favicon-->
