--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -20,7 +20,12 @@
 				{% for figure in figures %}
 					<div class="col-lg-4 mb-5 pb-3">
 						<div class="card h-100 shadow border-0">
-							<img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..."/>
+
+							{% if figure.getMainMedia == null %}
+								<img class="card-img-top" src="\images\media\figures-img\header.jpg" alt="">
+							{% else %}
+								<img class="card-img-top" src="\images\media\figures-img\{{ figure.getMainMedia.url }}" alt="..."/>
+							{% endif %}
 							<div class="card-body p-4">
 								<a class="text-decoration-none link-dark " href="{{ path('app_show_figure', {id: figure.id}) }}">
 									<h2 class="card-title mb-3">{{ figure.title }}</h2>
@@ -58,5 +63,6 @@
 
 		</div>
 	</section>
+	{{ knp_pagination_render(figures)}}
 {% endblock %}
 {% block preview %}{% endblock %}
