--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
 			</div>
 		{% endif %}
 		<section class="py-2">
-			<h1 class="h3 mb-3 font-weight-normal">Identifiez-vous</h1>
+			<h1 class="mb-3 font-weight-normal fw-bolder">Identifiez-vous</h1>
 			<label for="inputEmail">Email</label>
 			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 			<label for="inputPassword">Mot de passe</label>
@@ -30,7 +30,7 @@
 			<button class="btn btn-lg btn-primary m-auto w-25" type="submit">
 				Valider
 			</button>
-			<a class="btn btn-lg btn-secondary m-auto w-25" href="{{ path('app_forgot') }}">Mot de passe oublié !</a>
+			<a href="{{ path('app_forgot') }}">Mot de passe oublié !</a>
 		</section>
 
 	</form>
