--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -27,7 +27,7 @@
 								<img class="card-img-top" src="\images\media\figures-img\{{ figure.getMainMedia.url }}" alt="..."/>
 							{% endif %}
 							<div class="card-body p-4">
-								<a class="text-decoration-none link-dark " href="{{ path('app_show_figure', {id: figure.id}) }}">
+								<a class="text-decoration-none link-dark " href="{{ path('app_show_figure', {slug: figure.slug}) }}">
 									<h2 class="card-title mb-3">{{ figure.title }}</h2>
 								</a>
 								<p class="card-text mb-0">{{ figure.description }}</p>
@@ -47,7 +47,7 @@
 								<div class="container">
 									<div class="row justify-content-between">
 										<div class="col-3">
-											<a href="{{ path('app_edit_figure', {id: figure.id}) }}"><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
+											<a href="{{ path('app_edit_figure', {slug: figure.slug}) }}"><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
 										</div>
 										<div class="col-3 ">
 											<a><img class="img-fluid text-right" src="/assets/icone/poubelle.png" alt="logo" width="40*40"/></a>
