--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5270,6 +5270,10 @@ fieldset:disabled .btn {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
+  height: 15vw;
+  object-fit: cover;
+
+
 }
 
 .card-img,
