--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -30,7 +30,7 @@
 								<a class="text-decoration-none link-dark " href="{{ path('app_show_figure', {slug: figure.slug}) }}">
 									<h2 class="card-title mb-3">{{ figure.title }}</h2>
 								</a>
-								<p class="card-text mb-0">{{ figure.description }}</p>
+								<p class="card-text mb-0">{{ figure.description [:50] ~ '...'}}</p>
 							</div>
 							<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
 								<div class="d-flex align-items-end justify-content-between mb-4">
