--- a/templates/figure/show_figure.html.twig
+++ b/templates/figure/show_figure.html.twig
@@ -7,32 +7,50 @@
 {% block body %}
 	<section class="py-4">
 		<div class="container">
-
-
-			<img class="card-img-top" src="https://dummyimage.com/100x30/ced4da/6c757d" alt="..."/>
-
-
-			<img class="img-fluid">
-			<h2 class="card-title mb-3">{{ figure.title }}</h2>
-
-			<p class="card-text mb-0">{{ figure.description }}</p>
-		</div>
-		<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+			<h1 class="card-title mb-3 text-center">{{ figure.title }}</h1>
 			<div class="d-flex align-items-end justify-content-between mb-4">
-				<div class="d-flex align-items-center">
+				<div class="d-flex align-items-center m-5">
 					<img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..."/>
 					<div class="small">
-						<div class="fw-bold">{{ figure.user.username }}</div>
-						<div class="text-muted">{{ figure.createdAt | date('d/m/Y') }}
+						<div class="fw-bold">Auteur:
+							{{ figure.user.username }}</div>
+						<div class="text-muted">rédigé le:
+							{{ figure.createdAt | date('d/m/Y') }}
 							&middot;
-							{{ figure.createdAt | date('H:i') }}</div>
+							{{ figure.createdAt | date('H:i') }}
+							{% if figure.updateAt %}
+								~ modifié le:
+								{{ figure.updateAt | date('d/m/Y') }}
+								&middot;
+								{{ figure.updateAt | date('H:i') }}
+							{% endif %}
+						</div>
 					</div>
 				</div>
 			</div>
+			<h2>catégorie :
+				{{ figure.category.figureCategory }}</h2>
+			<section class="my-5">
+				<div class="row gx-3">
+					{% for media in figure.media %}
+						<div class="col-lg-3 mb-3 pb-3">
+							<img class="card-img-top" src="\images\media\figures-img\{{ media.url }}" alt="photo de {{ figure.title }}" width="250">
+						</div>
+					{% endfor %}
+				</div>
+			</section>
+
+
+			<img class="img-fluid">
+
+			<p class="card-text mb-0 text-justify">{{ figure.description | nl2br }}</p>
+		</div>
+		<div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+
 			<div class="container">
-				<div class="row justify-content-between">
+				<div class="row justify-content-around">
 					<div class="col-3">
-						<a><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
+						<a href="{{ path('app_edit_figure', {slug: figure.slug}) }}"><img class="img-fluid" src="/assets/icone/stylo.png" alt="logo" width="40*40"/></a>
 					</div>
 					<div class="col-3 ">
 						<a><img class="img-fluid text-right" src="/assets/icone/poubelle.png" alt="logo" width="40*40"/></a>
