--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -16,7 +16,7 @@
 					<a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Figures</a>
 					<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
 						<li>
-							<a class="dropdown-item" href="#figures">Voir les figures</a>
+							<a class="dropdown-item" href="{{ path('app_home')}}#figures">Voir les figures</a>
 						</li>
 						<li>
 							<a class="dropdown-item" href="{{ path('app_add_figure')}}">Ajouter une figure</a>
