--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 		</title>
 		<!-- Favicon-->
 		<link
-		rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+		rel="icon" type="image/x-icon" href="/assets/favicon.ico"/>
 		<!-- Bootstrap icons-->
 		<link
 		href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
@@ -165,7 +165,7 @@
 			<!-- Bootstrap core JS-->
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 			<!-- Core theme JS-->
-			<script src="js/scripts.js"></script>
+			<script src="/js/scripts.js"></script>
 		</body>
 	</html>
 </body></html>
