--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,12 +28,15 @@
 			{# templates/base.html.twig #}
 
 			{# read and display all flash messages #}
-				{% for label, messages in app.flashes %}
+				<div class="container px-5"> {% for label, messages in app.flashes %}
 					{% for message in messages %}
-						<div class="alert-{{ label }}"> {{ message }}
-					</div>
+						<div class="alert-{{ label }}">
+							{{ message }}
+						</div>
+					{% endfor %}
 				{% endfor %}
-			{% endfor %}
+			</div>
+
 			<!-- Header-->
 			{% block hero %}
 				<header class="py-5">
