--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -6,9 +6,7 @@
 				<div class="small m-0 text-white">Copyright &copy; Your Website 2022</div>
 			</div>
 			<div class="col-auto">
-				<a class="link-light small" href="#!">Privacy</a>
-				<span class="text-white mx-1">&middot;</span>
-				<a class="link-light small" href="#!">Terms</a>
+				<a class="link-light small" href="#!">Vie privée</a>
 				<span class="text-white mx-1">&middot;</span>
 				<a class="link-light small" href="#!">Contact</a>
 			</div>
