--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -4,6 +4,29 @@
 	Ajouter une Figure
 {% endblock %}
 {% block body %}
+	{% if editMode %}
+		<section class="m-5">
+			<div class="row">
+				{% for media in figure.media %}
+					<div class="col-lg-3 mb-3 pb-3">
+						{% if media.image %}
+							<img class="card-img-top" width="180" heigth="50" src="\images\media\figures-img\{{ media.url }}" alt="..."><a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
+						{% else %}
+							<div class="video">
+								<div class="card-img" width="240">
+									<iframe src="https://www.youtube.com/embed/{{ media.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div>
+								<div class="card-body" width="240">
+									<a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
+								</div>
+
+							</div>
+						{% endif %}
+					</div>
+				{% endfor %}
+			</div>
+		</section>
+	{% endif %}
 	<div class="">
 		{% if editMode %}
 			<h1>Modifier la figure</h1>
@@ -28,24 +51,7 @@
 			Enregistrer la figure
 		{% endif %}
 	</button>
-	{% if editMode %}
-		<section class="m-5">
-			<div class="row">
-				{% for media in figure.media %}
-					<div class="col-lg-4 mb-3 pb-3">
-						{% if media.image %}
-							<img class="card-img-top" src="\images\media\figures-img\{{ media.url }}" alt="..." width="150"><a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
-						{% else %}
-							<div class="video">
-								<iframe width="317" height="200" src="https://www.youtube.com/embed/{{ media.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-								<a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
-							</div>
-						{% endif %}
-					</div>
-				{% endfor %}
-			</div>
-		</section>
-	{% endif %}
+
 	<a class="btn btn-secondary" href="{{ path('app_home') }}">Annuler</a>
 
 	{{ form_end(form) }}
