--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -9,50 +9,56 @@
 			<div class="row">
 				{% for media in figure.media %}
 					<div class="col-lg-3 mb-3 pb-3">
-						{% if media.image %}
-							<img class="card-img-top" width="180" heigth="50" src="\images\media\figures-img\{{ media.url }}" alt="..."><a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
-						{% else %}
-							<div class="video">
-								<div class="card-img" width="240">
-									<iframe src="https://www.youtube.com/embed/{{ media.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-								</div>
-								<div class="card-body" width="240">
-									<a href="{{ path('app_delete_media', {id: media.id})}}">Supprimer</a>
-								</div>
+						<div class="card h-100">
+							{% if media.image %}
+								<img class="card-img-top" width="180" heigth="50" src="\images\media\figures-img\{{ media.url }}" alt="..."><a href="{{ path('app_delete_media', {id: media.id})}}">
+									<div class="card-body" width="240">
+										<a href="{{ path('app_delete_media', {id: media.id})}}" onclick="return confirm('Vous allez supprimer le média. Confirmez votre choix')"><img class="img-fluid" src="/assets/icone/poubelle.png" alt="logo" width="20*20"/></a>
+									</div>
+								{% else %}
+									<div class="video">
+										<div class="card-img-top" width="240">
+											<iframe src="https://www.youtube.com/embed/{{ media.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+										<div class="card-body" width="240">
+											<a href="{{ path('app_delete_media', {id: media.id})}}"><img class="img-fluid" src="/assets/icone/poubelle.png" alt="logo" width="20*20"/></a>
+										</div>
 
+									</div>
+								{% endif %}
 							</div>
-						{% endif %}
-					</div>
-				{% endfor %}
-			</div>
-		</section>
-	{% endif %}
-	<div class="">
-		{% if editMode %}
-			<h1>Modifier la figure</h1>
-		{% else %}
-			<h1>Créez votre figure</h1>
+						</div>
+					{% endfor %}
+				</div>
+			</section>
 		{% endif %}
+		<div class="">
+			{% if editMode %}
+				<h1>Modifier la figure</h1>
+			{% else %}
+				<h1>Créez votre figure</h1>
+			{% endif %}
+		</div>
+		{{ form_start(form) }}
+		{{ form_row(form.title) }}
+		{{ form_row(form.description) }}
+		{{ form_row(form.category) }}
+		{{ form_row(form.video) }}
+		{% if editMode %}
+			{{ form_row(form.media, {'required': false}) }}
+		{% else %}
+			{{ form_row(form.media) }}
+		{% endif %}
+		<br><button type="submit" class="btn btn-primary">
+			{% if editMode %}
+				Modifier la figure
+			{% else %}
+				Enregistrer la figure
+			{% endif %}
+		</button>
+
+		<a class="btn btn-secondary" href="{{ path('app_home') }}">Annuler</a>
+
+		{{ form_end(form) }}
 	</div>
-	{{ form_start(form) }}
-	{{ form_row(form.title) }}
-	{{ form_row(form.description) }}
-	{{ form_row(form.category) }}
-	{{ form_row(form.video) }}
-	{% if editMode %}
-		{{ form_row(form.media, {'required': false}) }}
-	{% else %}
-		{{ form_row(form.media) }}
-	{% endif %}
-	<br><button type="submit" class="btn btn-primary">
-		{% if editMode %}
-			Modifier la figure
-		{% else %}
-			Enregistrer la figure
-		{% endif %}
-	</button>
-
-	<a class="btn btn-secondary" href="{{ path('app_home') }}">Annuler</a>
-
-	{{ form_end(form) }}
-</div></div>{% endblock %}{% block preview %}{% endblock %}
+</div>{% endblock %}{% block preview %}{% endblock %}
